--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
             </ul>
         </nav>
 
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">HI! I'm</h3>
+                <h1 class="banner-title">TAMIM AHMED</h1>
+                <p class="banner-p">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary button-c"><i class="fa-solid fa-download"></i>  Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i>  Contact</button>
+
+            </div>
+        </div>
+
     </header>
 </body>
 </html>
